src/test/deca/syntax/valid/created/operation.deca
{
int a = a = b;
a = a+b;
a = a*b/c%d;
}