src/test/deca/syntax/invalid/created/miscellaneous/decl_bad_place.deca
// Description :
//    la declaration de variable ne peut se faire après une inst
//
// Resultats :
//		Syntaxe error

{
a = a + 1;
int b;
}